# axum_crud

./: .env  Cargo.toml
migrations/: 20231031072458_initial.sql
src/: db.rs  index.html  main.rs  rest.rs
