[package]
name = "axum_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]} #async runtime
anyhow = "1.0.75" #Anyhow for simple error handling
dotenv = "0.15.0" #Dotenv for reading ".env" files
serde ={ version = "1.0.188", features = ["derive"]} #Serde for Serialization/Deserialization
sqlx ={ version = "0.7.2", features = ["runtime-tokio", "sqlite"]} #SQLX for Database
axum = "0.6.20" #Axum for rest api

[dev-dependencies]
axum-test-helper = "0.3.0" #unit test